--- a/app/src/main/res/layout/activity_sell_page.xml
+++ b/app/src/main/res/layout/activity_sell_page.xml
@@ -23,6 +23,7 @@
         android:layout_width="172dp"
         android:layout_height="154dp"
         android:layout_marginBottom="560dp"
+        android:src="@drawable/baseline_image_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.066"
@@ -30,7 +31,7 @@
 
     <EditText
         android:id="@+id/price"
-        android:layout_width="120dp"
+        android:layout_width="130dp"
         android:layout_height="68dp"
         android:layout_marginBottom="480dp"
         android:hint="Price (Per ml)"
