--- a/app/src/main/res/layout/insurance.xml
+++ b/app/src/main/res/layout/insurance.xml
@@ -7,17 +7,45 @@
     tools:context=".ui.insurance.insurance"
     android:background="@drawable/hopefullyfinalbackground">
 
-    <TextView
-        android:id="@+id/text_slideshow"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
+        android:layout_height="105dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.13">
+
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="391dp"
+            android:layout_height="48dp"
+            android:layout_marginBottom="624dp"
+            android:text=" Company Name"
+            android:textColor="#FF0000"
+            android:textSize="24dp" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="391dp"
+            android:layout_height="87dp"
+            android:paddingTop="30dp"
+            android:text="Company Description"
+            android:textColor="@color/black"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="142dp"
+            android:layout_height="wrap_content"
+            android:paddingTop="80dp"
+            android:text="View More >.."
+            android:textColor="@color/purple_700"
+            android:textSize="20sp" />
+
+    </androidx.cardview.widget.CardView>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
